--- a/css/estilos.css
+++ b/css/estilos.css
@@ -216,6 +216,15 @@ a.dropdown-item {
   text-align: left;
 }
 
+.texto-en-bloque-integrantes {
+  margin-left: 10%;
+  margin-right: 10%;
+  font-size: 1em;
+  text-align: center;
+  margin-top: -3rem;
+  margin-bottom: 2rem;
+}
+
 /*GRID BIO*/
 .seccion-integrantes .main {
   display: grid;
@@ -507,7 +516,7 @@ footer .color-verde {
   color: #00ff94;
 }
 
-footer .footer-del-index {
+footer .footer-general {
   position: absolute;
   bottom: -350px;
   left: 0;
@@ -515,7 +524,7 @@ footer .footer-del-index {
   width: 99%;
 }
 
-footer .footer-del-index h1 {
+footer .footer-general h1 {
   margin-top: 2%;
   margin-bottom: 2%;
 }
@@ -699,14 +708,15 @@ footer .rrss .rrss-width:hover {
 }
 
 /*MOBILE XL MEDIA QUERY*/
-@media only screen and (min-width: 375px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+@media only screen and (min-width: 413px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   /*Estilos generales*/
   body {
-    font-size: 1em;
+    font-size: 1.1em;
     margin-left: 0;
   }
   body h2 {
     font-size: 3em;
+    margin-top: 6%;
     margin-bottom: 6%;
     color: #f800ff;
   }
@@ -800,24 +810,24 @@ footer .rrss .rrss-width:hover {
     padding: 5%, 5%, 5%, 5%;
   }
   /*PÁGINA PRENSA*/
-  .texto-en-bloque {
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: 1em;
-    text-align: center;
+  p.texto-en-bloque {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 1.1em;
+    text-align: left;
   }
   /*GRID PRENSA*/
-  .seccion-prensa {
+  section.seccion-prensa {
     margin-left: 0px;
     margin-right: 0px;
   }
-  .seccion-prensa .prensa-main {
-    grid-row-gap: 80px;
+  section.seccion-prensa .prensa-main {
+    grid-row-gap: 60px;
     margin-top: 40px;
     margin-bottom: 90px;
     grid-template-columns: 5% 45% 45% 5%;
   }
-  .seccion-prensa .prensa-link-width {
+  section.seccion-prensa .prensa-link-width {
     width: 80%;
   }
   /*CONTACTO FORMULARIO*/
@@ -828,8 +838,9 @@ footer .rrss .rrss-width:hover {
   .seccion-contacto .formulario {
     font-size: 1em;
   }
-  .seccion-contacto .formulario .textarea-width {
-    width: 340px;
+  .seccion-contacto .formulario textarea.textarea-width {
+    width: 325px;
+    height: 210px;
   }
   .seccion-contacto .formulario .boton-formulario {
     padding: 5px 32px;
@@ -837,50 +848,46 @@ footer .rrss .rrss-width:hover {
     text-align: center;
     font-size: 1em;
   }
-  /*FOOTER*/
-  footer .footer-del-index {
-    margin-bottom: 50px;
+  /*GALERIA*/
+  p.texto-en-bloque-galeria {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10%;
+    font-size: 1.1em;
+    text-align: center;
   }
-  footer .footer-del-index h1 {
+  h2.h2-galeria {
+    margin-bottom: 10%;
+  }
+  /*FOOTER*/
+  footer div.footer-videos.footer-general {
+    margin-bottom: -10px;
+  }
+  footer .footer-general {
+    margin-bottom: -30px;
+  }
+  footer .footer-general h1 {
     font-size: 1.81818em;
   }
-  footer .footer-del-index .color-verde {
+  footer .footer-general .color-verde {
     font-size: 0.83333em;
     color: #00ff94;
     margin-bottom: 5px;
   }
-  footer .footer-del-index .color-fucsia {
-    font-size: 0.83333em;
+  footer .footer-general .color-fucsia {
+    font-size: 1.08333em;
     color: #f800ff;
     font-weight: bold;
     text-decoration-line: none;
   }
-  footer .footer-del-index .color-fucsia:hover {
+  footer .footer-general .color-fucsia:hover {
     color: #f800ff;
   }
-  footer .footer-del-index .color-blanco {
+  footer .footer-general .color-blanco {
     font-size: 0.83333em;
     color: white;
   }
-  footer .footer-del-index .footer-del-index {
-    position: absolute;
-    bottom: -350px;
-    left: 0;
-    z-index: 0;
-    width: 99%;
-  }
-  footer .footer-del-index .footer-del-index h1 {
-    margin-top: 2%;
-    margin-bottom: 2%;
-  }
-  footer .footer-del-index .footer-paginas {
-    position: absolute;
-    bottom: -100px;
-    left: 0;
-    z-index: 0;
-    width: 99%;
-  }
-  footer .footer-del-index .nav-del-footer .nav-del-footer-main {
+  footer .footer-general .nav-del-footer .nav-del-footer-main {
     display: grid;
     margin-left: 8%;
     margin-right: 12%;
@@ -890,70 +897,70 @@ footer .rrss .rrss-width:hover {
     grid-template-rows: 50% 50%;
     grid-row-gap: 5px;
   }
-  footer .footer-del-index .nav-del-footer .inicio-li {
+  footer .footer-general .nav-del-footer .inicio-li {
     display: grid;
     align-self: center;
     justify-content: flex-start;
     grid-column: 2;
     grid-row: 1;
   }
-  footer .footer-del-index .nav-del-footer .bio-li {
+  footer .footer-general .nav-del-footer .bio-li {
     display: grid;
     align-self: center;
     grid-column: 3;
     grid-row: 1;
   }
-  footer .footer-del-index .nav-del-footer .musica-li {
+  footer .footer-general .nav-del-footer .musica-li {
     display: grid;
     align-self: center;
     grid-column: 4;
     grid-row: 1;
   }
-  footer .footer-del-index .nav-del-footer .videos-li {
+  footer .footer-general .nav-del-footer .videos-li {
     display: grid;
     align-self: center;
     justify-content: flex-end;
     grid-column: 5;
     grid-row: 1;
   }
-  footer .footer-del-index .nav-del-footer .galeria-li {
+  footer .footer-general .nav-del-footer .galeria-li {
     display: grid;
     align-self: center;
     justify-content: flex-start;
     grid-column: 2;
     grid-row: 2;
   }
-  footer .footer-del-index .nav-del-footer .prensa-li {
+  footer .footer-general .nav-del-footer .prensa-li {
     display: grid;
     align-self: center;
     grid-row: 2;
     grid-column: 3 / 5;
   }
-  footer .footer-del-index .nav-del-footer .contacto-li {
+  footer .footer-general .nav-del-footer .contacto-li {
     display: grid;
     align-self: center;
     justify-content: flex-end;
     grid-column: 5;
     grid-row: 2;
   }
-  footer .footer-del-index .nav-del-footer a.footer-nav-link {
+  footer .footer-general .nav-del-footer a.footer-nav-link {
     font-size: 11px;
     color: gray;
     text-decoration-line: none;
   }
-  footer .footer-del-index .nav-del-footer a.footer-nav-link:hover {
+  footer .footer-general .nav-del-footer a.footer-nav-link:hover {
     color: gray;
   }
-  footer .footer-del-index .rrss {
+  footer .footer-general .rrss {
     margin-top: 10%;
     margin-bottom: 10%;
     margin-left: 20%;
     margin-right: 20%;
   }
-  footer .footer-del-index .rrss .rrss-width {
+  footer .footer-general .rrss .rrss-width {
     width: 60%;
   }
-  footer .footer-del-index .rrss .rrss-width:hover {
+  footer .footer-general .rrss .rrss-width:hover {
     animation: none;
     transform: none;
     -webkit-transform: none;
@@ -1076,6 +1083,14 @@ footer .rrss .rrss-width:hover {
     font-size: 1em;
     text-align: center;
   }
+  .texto-en-bloque-integrantes {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 1em;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 2rem;
+  }
   /*GRID PRENSA*/
   .seccion-prensa {
     margin-left: 0px;
@@ -1115,14 +1130,14 @@ footer .rrss .rrss-width:hover {
     color: #00ff94;
     margin-bottom: 5px;
   }
-  footer .footer-del-index {
+  footer .footer-general {
     position: absolute;
     bottom: -250px;
     left: 0;
     z-index: 0;
     width: 99%;
   }
-  footer .footer-del-index h1 {
+  footer .footer-general h1 {
     margin-top: 2%;
     margin-bottom: 2%;
   }
@@ -1337,6 +1352,14 @@ footer .rrss .rrss-width:hover {
     font-size: 1em;
     text-align: center;
   }
+  .texto-en-bloque-integrantes {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 1em;
+    text-align: center;
+    margin-top: 0rem;
+    margin-bottom: 2rem;
+  }
   /*GRID PRENSA*/
   .seccion-prensa {
     margin-left: 0px;
@@ -1369,8 +1392,8 @@ footer .rrss .rrss-width:hover {
     font-size: 1em;
   }
   /*FOOTER*/
-  .footer-del-index {
-    margin-bottom: 80px;
+  .footer-general {
+    margin-bottom: 0px;
   }
   footer h1 {
     font-size: 1.33333em;
