--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -22,7 +22,7 @@ footer{
         font-size: $textofooter;
         color: $verde;
     }
-    .footer-del-index{
+    .footer-general{
         position: absolute;
         bottom: -350px;
         left: 0;
