Reescritura de mediaqueries

--- a/scss/_estilosgenerales.scss
+++ b/scss/_estilosgenerales.scss
@@ -1,3 +1,4 @@
+
 html{
     min-height: 100vh;   
 }
@@ -46,7 +47,7 @@ body{
     }
 }
 /*Logo del menú*/
-.logo-en-menu{
+.logo-tp{
     margin-top: 5px;
     margin-left: 5px;
     width: 45px;
@@ -75,7 +76,7 @@ article{
     margin-bottom: 70px;
 }
 /*Titulo imagen sin animación*/
-.titulo-sin-animacion{
+.titulo-tp{
     width: 600px;
     padding-top: 3rem;
     padding-bottom: 1rem;
