--- a/scss/_prensa.scss
+++ b/scss/_prensa.scss
@@ -9,12 +9,12 @@
 .seccion-prensa{
     margin-left: 150px;
     margin-right: 150px;
-    .prensa-main{
+        .prensa-main{
         display: grid;
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 3%;
-        margin-bottom: 0%;
+        margin-bottom: 70px;
         grid-template-columns: 20% 30% 30% 20%;
         grid-template-rows: 33% 33% 34%;
         grid-row-gap: 50px;
