--- a/scss/mediaqueries/_min1024portrait.scss
+++ b/scss/mediaqueries/_min1024portrait.scss
@@ -83,15 +83,16 @@
 /*PÁGINA GALERÍA*/
     .pie-galeria{
         margin-bottom: -5%;
-
     }
     .texto-en-bloque-galeria{
-        margin-bottom: 5%;
+        display:none
+    }
+    .texto-galeria-portrait{
+        display:block;
         margin-left: 10%;
         margin-right: 10%;
         font-size: $textobody;
         text-align: center;
-        @include nohover
     }
 /*PÁGINA PRENSA*/
     .texto-en-bloque{
