--- a/scss/mediaqueries/_min1370landscape.scss
+++ b/scss/mediaqueries/_min1370landscape.scss
@@ -102,6 +102,10 @@
             }
         }
     }
+    /*PÁGINA GALERÍA*/
+    .texto-galeria-portrait{
+        display:none
+    }
     /*FOOTER*/
     footer{
         .pie-tp{
