--- a/scss/mediaqueries/_min280portrait.scss
+++ b/scss/mediaqueries/_min280portrait.scss
@@ -124,12 +124,14 @@
     }
 /*PÁGINA GALERÍA*/
     .texto-en-bloque-galeria{
-        margin-bottom: 10%;
+        display:none
+    }
+    .texto-galeria-portrait{
+        display:block;
         margin-left: 10%;
         margin-right: 10%;
         font-size: $textobody;
         text-align: center;
-        @include nohover
     }
 /*PÁGINA PRENSA*/
     .texto-en-bloque{
