--- a/scss/mediaqueries/_min360landscape.scss
+++ b/scss/mediaqueries/_min360landscape.scss
@@ -39,6 +39,10 @@
             margin-left: -6px;
             margin-bottom: 3px;
         }
+/*PÁGINA GALERÍA*/
+.texto-galeria-portrait{
+    display:none
+}
 /*PÁGINA CONTACTO*/
     /*Formulario*/
     .seccion-contacto{
