--- a/scss/mediaqueries/_min360portrait.scss
+++ b/scss/mediaqueries/_min360portrait.scss
@@ -14,7 +14,10 @@
 }
 /*PÁGINA GALERÍA*/
 .texto-en-bloque-galeria{
-    margin-bottom: 10%;
+    display:none
+}
+.texto-galeria-portrait{
+    display:block;
     margin-left: 10%;
     margin-right: 10%;
     font-size: $textobody;
