--- a/scss/mediaqueries/_min1030landscape.scss
+++ b/scss/mediaqueries/_min1030landscape.scss
@@ -221,6 +221,9 @@
     font-size: $textobody;
     text-align: center;
 }
+.texto-galeria-portrait{
+    display:none
+}
 /*PÁGINA CONTACTO*/
     /*Formulario*/
     .seccion-contacto{
