--- a/scss/mediaqueries/_min411landscape.scss
+++ b/scss/mediaqueries/_min411landscape.scss
@@ -169,6 +169,9 @@
         font-size: $textobody;
         text-align: center;
     }
+    .texto-galeria-portrait{
+        display:none
+    }
     /*PÁGINA CONTACTO*/
         /*Formulario*/
         .seccion-contacto{
