--- a/scss/mediaqueries/_min768portrait.scss
+++ b/scss/mediaqueries/_min768portrait.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) and (orientation: portrait){
+@media only screen and (min-width: 580px) and (orientation: portrait){
 /*ESTILOS GENERALES*/
     /*Fuentes y secciones*/
     body{
@@ -83,15 +83,16 @@
 /*PÁGINA GALERÍA*/
     .pie-galeria{
         margin-bottom: -5%;
-
     }
     .texto-en-bloque-galeria{
-        margin-bottom: 5%;
+        display:none
+    }
+    .texto-galeria-portrait{
+        display:block;
         margin-left: 10%;
         margin-right: 10%;
         font-size: $textobody;
         text-align: center;
-        @include nohover
     }
 /*PÁGINA PRENSA*/
     .texto-en-bloque{
