--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2922,6 +2922,252 @@ footer .rrss .rrss-width:hover {
   }
 }
 
+@media only screen and (min-width: 640px) and (orientation: portrait) {
+  /*ESTILOS GENERALES*/
+  /*Fuentes y secciones*/
+  body {
+    font-size: 0.90909em;
+    margin-left: 0;
+  }
+  body h2 {
+    font-size: 2.72727em;
+    margin-bottom: 6%;
+    margin-top: 4%;
+    color: #f800ff;
+  }
+  body h3 {
+    font-size: 1.66667em;
+    margin-bottom: 5%;
+    color: #00ff94;
+  }
+  section {
+    margin-bottom: 30px;
+  }
+  article {
+    margin-bottom: 30px;
+  }
+  a.dropdown-item {
+    color: #f800ff;
+    font-size: 15px;
+    text-align: center;
+    margin-left: auto;
+    margin-bottom: 3px;
+  }
+  /*Logo del menú*/
+  .menu-con-bootstrap .logo-tp {
+    display: block;
+    margin-top: 5px;
+    margin-left: 5px;
+    width: 40px;
+  }
+  .menu-con-bootstrap .logo-tp:hover {
+    animation: none;
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    opacity: 1;
+    transition: none;
+  }
+  /*Menú*/
+  .dropdown-toggle {
+    margin-bottom: -10px;
+  }
+  /*Titulo imagen*/
+  .titulo .titulo-tp {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+  }
+  /*BIO*/
+  /*Grid*/
+  .seccion-integrantes {
+    margin-bottom: 10%;
+  }
+  .seccion-integrantes main {
+    width: 73%;
+  }
+  /*PÁGINA MÚSICA*/
+  .section-musica {
+    margin-bottom: -10px;
+  }
+  .section-musica .bloque .iframe-musica {
+    margin-top: 5%;
+    margin-bottom: 7%;
+    border: 0;
+    width: 460px;
+    height: 580px;
+  }
+  /*PÁGINA VÍDEOS*/
+  .section-videos {
+    margin-bottom: 0%;
+  }
+  /*PÁGINA GALERÍA*/
+  .texto-en-bloque-galeria {
+    display: none;
+  }
+  .texto-galeria-portrait {
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 1em;
+    text-align: center;
+  }
+  /*PÁGINA PRENSA*/
+  .texto-en-bloque {
+    margin-left: 13.5%;
+    margin-right: 10%;
+    font-size: 1em;
+    text-align: left;
+  }
+  /*Grid Prensa*/
+  .seccion-prensa {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .seccion-prensa .prensa-main {
+    grid-row-gap: 40px;
+    margin-top: 3%;
+    margin-bottom: 13%;
+    grid-template-columns: 5% 45% 45% 5%;
+  }
+  .seccion-prensa .prensa-link-width {
+    width: 80%;
+  }
+  /*PÁGINA CONTACTO*/
+  /*Formulario*/
+  .seccion-contacto {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 0%;
+  }
+  .seccion-contacto .formulario {
+    font-size: 1em;
+  }
+  .seccion-contacto .formulario .textarea-width {
+    width: 440px;
+  }
+  .seccion-contacto .formulario .boton-formulario {
+    padding: 5px 32px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 1em;
+  }
+  /*FOOTER*/
+  footer .pie-tp {
+    display: block;
+    position: absolute;
+    bottom: -370px;
+    left: 0;
+    z-index: 0;
+    width: 99%;
+  }
+  footer .pie-tp h1 {
+    font-size: 1.53846em;
+  }
+  footer .pie-tp .color-verde {
+    font-size: 0.83333em;
+    color: #00ff94;
+    margin-bottom: 5px;
+  }
+  footer .pie-tp .color-fucsia {
+    font-size: 1.08333em;
+    color: #f800ff;
+    font-weight: bold;
+    text-decoration-line: none;
+  }
+  footer .pie-tp .color-fucsia:hover {
+    color: #f800ff;
+  }
+  footer .pie-tp .color-blanco {
+    font-size: 0.83333em;
+    color: white;
+  }
+  footer .pie-tp .nav-del-footer .nav-del-footer-main {
+    display: grid;
+    margin-left: 12%;
+    margin-right: 14%;
+    margin-top: 5%;
+    margin-bottom: 1%;
+    grid-template-columns: 5% 20% 15% 30% 20% 5%;
+    grid-template-rows: 50% 50%;
+    grid-row-gap: 5px;
+  }
+  footer .pie-tp .nav-del-footer .inicio-li {
+    display: grid;
+    align-self: center;
+    justify-content: flex-start;
+    grid-column: 2;
+    grid-row: 1;
+  }
+  footer .pie-tp .nav-del-footer .bio-li {
+    display: grid;
+    align-self: center;
+    grid-column: 3;
+    grid-row: 1;
+  }
+  footer .pie-tp .nav-del-footer .musica-li {
+    display: grid;
+    align-self: center;
+    grid-column: 4;
+    grid-row: 1;
+  }
+  footer .pie-tp .nav-del-footer .videos-li {
+    display: grid;
+    align-self: center;
+    justify-content: flex-end;
+    grid-column: 5;
+    grid-row: 1;
+  }
+  footer .pie-tp .nav-del-footer .galeria-li {
+    display: grid;
+    align-self: center;
+    justify-content: flex-start;
+    grid-column: 2;
+    grid-row: 2;
+  }
+  footer .pie-tp .nav-del-footer .prensa-li {
+    display: grid;
+    align-self: center;
+    grid-row: 2;
+    grid-column: 3 / 5;
+  }
+  footer .pie-tp .nav-del-footer .contacto-li {
+    display: grid;
+    align-self: center;
+    justify-content: flex-end;
+    grid-column: 5;
+    grid-row: 2;
+  }
+  footer .pie-tp .nav-del-footer .footer-nav-link {
+    font-size: 12px;
+    color: gray;
+    text-decoration-line: none;
+  }
+  footer .pie-tp .nav-del-footer .footer-nav-link:hover {
+    color: gray;
+  }
+  footer .pie-tp .rrss {
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+  footer .pie-tp .rrss .rrss-width {
+    width: 65%;
+  }
+  footer .pie-tp .rrss .rrss-width:hover {
+    animation: none;
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    opacity: 1;
+    transition: none;
+  }
+}
+
 @media only screen and (min-width: 640px) and (orientation: landscape) {
   /*ESTILOS GENERALES*/
   /*Fuentes y secciones*/
@@ -3250,7 +3496,7 @@ footer .rrss .rrss-width:hover {
   }
 }
 
-@media only screen and (min-width: 580px) and (orientation: portrait) {
+@media only screen and (min-width: 768px) and (orientation: portrait) {
   /*ESTILOS GENERALES*/
   /*Fuentes y secciones*/
   body {
