--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -7,6 +7,7 @@
 @import "mediaqueries/min414portrait";
 @import "mediaqueries/min540portrait";
 @import "mediaqueries/min540landscape";
+@import "mediaqueries/min640portrait";
 @import "mediaqueries/min640landscape";
 @import "mediaqueries/min768portrait";
 @import "mediaqueries/min768landscape";
