--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -11,6 +11,7 @@
 @import "mediaqueries/min640landscape";
 @import "mediaqueries/min768portrait";
 @import "mediaqueries/min768landscape";
+@import "mediaqueries/min880portrait";
 @import "mediaqueries/min895landscape";
 @import "mediaqueries/min1024portrait";
 @import "mediaqueries/min1030landscape";
