--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -8,6 +8,7 @@
 @import "musica";
 @import "videos";
 @import "prensa";
+@import "tienda";
 @import "contacto";
 @import "footer";
 @import "mediaqueries";
